up system design
